# java-developer-document

./: .editorconfig  .gitignore  README.md
工具/: FFmpeg.md  tail使用说明.md
工具/bat转exe/: Bat_To_Exe_Converter64.rar  Small-Tools.bat
工具/html转md/: html转md.md
工具/linux/: UltraISO.rar  系统启动盘制作.md
工具/win10激活/: README.md
工具/其它/: 01-windows上tail查看日志使用说明.md  02-nocode.md  03-eeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee.md  04-程序员延寿指南.md  06-笔记工具.md  07-chinese-independent-developer.md  08-PhoneSploit-Pro.md  09-AI制作视频.md  10-Windows10专业版.md  11-Chat2DB.md  12-word转markdown.md  13-CPing局域网查看IP.md  14-apng压缩.md
工具/好玩的/: 01-临时邮箱.md  02-临时手机号接收短信验证码.md  03-ChatGPT.md  04-NazoGame.md  05-微信机器人助手.md  06-AutoCut.md  06-FFmpeg.md  07-cheat.sh.md  08-微信QQ等聊天软件之消息防撤回.md  09-黑客工具.md  10-sqlmap.md  11-NoSQLMap.md  12-visual-chatgpt.md  13-Depix.md  14-EasySpider.md  15-thefuck.md  16-Claude.md  17-密探(渗透测试工具).md  18-域名绑定Cloudflare实现无限邮箱.md  19-Genimi学生认证.md
工具/好看的/: 01-ZY-Player.md  02-影视解析接口.md  03-you-get.md
工具/开发/: 01-正则表达式可视化.md  02-中微子代理（neutrino-proxy）.md  03-useful-scripts.md
工具/效率/: 01-Notion.md  01-谷歌插件.md  02-CodeWhisperer.md  03-Snipaste-截图工具.md  04-Bandizip-解压工具.md  05-Recuva-文件恢复.md  06-Everything-文件搜索.md  (+2 more)
生活/: 01-STAR法则.md  02-FAB法则.md  03-5W3H分析法.md  04-PEST分析法.md  05-SWOT分析法.md  06-MVP产品开发.md  07-六顶思考帽.md  08-第一性原理.md  09-SCQA方法论.md  10-OKR目标管理.md  11-KPI关键绩效指标.md  12-SMART分析法.md  13-PEST分析法.md  14-数仓分层.md  15-海盗指标-AARRR.md  16-运营策略-RARRA模型.md  17-客户价值衡量模型-RFM.md  18-费曼学习法.md
知识库/: 网络优质学习笔记.md  高效开发分享.md
知识库/Python/01-环境/03-其它/Poetry/my-project/: pyproject.toml
(+2448 files in other folders)
