[project]
name = "my-project"
version = "0.1.0"
description = ""
authors = [
    {name = "zhengqingya",email = "xxx@qq.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
